logs/cborencoder.h

typedef unsigned int size_t;
typedef __uint8_t uint8_t ;
typedef __uint16_t uint16_t ;
typedef __uint32_t uint32_t ;
typedef __int64_t int64_t ;
typedef __uint64_t uint64_t ;
struct File;
typedef struct File FILE;
struct File
{
    const struct File_methods *vmt;
};
#define bool _Bool
typedef enum CborError {
    CborNoError = 0,


    CborUnknownError,
    CborErrorUnknownLength,
    CborErrorAdvancePastEOF,
    CborErrorIO,


    CborErrorGarbageAtEnd = 256,
    CborErrorUnexpectedEOF,
    CborErrorUnexpectedBreak,
    CborErrorUnknownType,
    CborErrorIllegalType,
    CborErrorIllegalNumber,
    CborErrorIllegalSimpleType,


    CborErrorUnknownSimpleType = 512,
    CborErrorUnknownTag,
    CborErrorInappropriateTagForType,
    CborErrorDuplicateObjectKeys,
    CborErrorInvalidUtf8TextString,


    CborErrorTooManyItems = 768,
    CborErrorTooFewItems,


    CborErrorDataTooLarge = 1024,
    CborErrorNestingTooDeep,
    CborErrorUnsupportedType,


    CborErrorJsonObjectKeyIsAggregate,
    CborErrorJsonObjectKeyNotString,
    CborErrorJsonNotImplemented,

    CborErrorOutOfMemory = ~0U / 2 + 1,
    CborErrorInternalError = ~0U
} CborError;
struct cbor_encoder_writer;
typedef int (cbor_encoder_write)(struct cbor_encoder_writer *, const char *data, int len);
typedef struct cbor_encoder_writer {
    cbor_encoder_write *write;
    int bytes_written;
} cbor_encoder_writer;
struct CborEncoder {
    cbor_encoder_writer *writer;
    void *writer_arg;
    size_t added;
    int flags;
};
typedef struct CborEncoder CborEncoder;
struct cbor_decoder_reader;
typedef uint8_t (cbor_reader_get8)(struct cbor_decoder_reader *d, int offset);
typedef uint16_t (cbor_reader_get16)(struct cbor_decoder_reader *d, int offset);
typedef uint32_t (cbor_reader_get32)(struct cbor_decoder_reader *d, int offset);
typedef uint64_t (cbor_reader_get64)(struct cbor_decoder_reader *d, int offset);
typedef uintptr_t (cbor_memcmp)(struct cbor_decoder_reader *d, char *buf, int offset, size_t len);
typedef uintptr_t (cbor_memcpy)(struct cbor_decoder_reader *d, char *buf, int offset, size_t len);
struct cbor_decoder_reader {
    cbor_reader_get8 *get8;
    cbor_reader_get16 *get16;
    cbor_reader_get32 *get32;
    cbor_reader_get64 *get64;
    cbor_memcmp *cmp;
    cbor_memcpy *cpy;
    size_t message_size;
};
struct CborParser
{
    struct cbor_decoder_reader *d;
    int end;
    int flags;
};
typedef struct CborParser CborParser;
struct CborValue
{
    const CborParser *parser;
    int offset;
    uint32_t remaining;
    uint16_t extra;
    uint8_t type;
    uint8_t flags;
};
typedef struct CborValue CborValue;
 CborError cbor_parser_init(struct cbor_decoder_reader *d, int flags, CborParser *parser, CborValue *it);
 CborError cbor_value_advance_fixed(CborValue *it);
 CborError cbor_value_advance(CborValue *it);
 CborError cbor_value_enter_container(const CborValue *it, CborValue *recursed);
 CborError cbor_value_leave_container(CborValue *it, const CborValue *recursed);
 uint64_t _cbor_value_decode_int64_internal(const CborValue *value);
 CborError cbor_value_get_int64_checked(const CborValue *value, int64_t *result);
 CborError cbor_value_get_int_checked(const CborValue *value, int *result);
 CborError cbor_value_skip_tag(CborValue *it);
 CborError _cbor_value_copy_string(const CborValue *value, void *buffer,
                                                   size_t *buflen, CborValue *next);
 CborError _cbor_value_dup_string(const CborValue *value, void **buffer,
                                                  size_t *buflen, CborValue *next);
 CborError cbor_value_calculate_string_length(const CborValue *value, size_t *length);
 CborError cbor_value_text_string_equals(const CborValue *value, const char *string, 
# 429 "repos/apache-mynewt-core/encoding/tinycbor/include/tinycbor/cbor.h" 3 4
 CborError cbor_value_map_find_value(const CborValue *map, const char *string, CborValue *element);
 CborError cbor_value_get_half_float(const CborValue *value, void *result);
 CborError cbor_value_to_pretty_advance(FILE *out, CborValue *value);
struct mgmt_cbuf {
    struct CborParser parser;
    struct CborEncoder encoder;
    struct CborValue it;
};
typedef enum CborMajorTypes {
    UnsignedIntegerType = 0U,
    NegativeIntegerType = 1U,
    ByteStringType = 2U,
    TextStringType = 3U,
    ArrayType = 4U,
    MapType = 5U,
    TagType = 6U,
    SimpleTypesType = 7U
} CborMajorTypes;
typedef enum CborSimpleTypes {
    FalseValue = 20,
    TrueValue = 21,
    NullValue = 22,
    UndefinedValue = 23,
    SimpleTypeInNextByte = 24,
    HalfPrecisionFloat = 25,
    SinglePrecisionFloat = 26,
    DoublePrecisionFloat = 27,
    Break = 31
} CborSimpleTypes;
enum {
    SmallValueBitLength = 5U,
    SmallValueMask = (1U << SmallValueBitLength) - 1,
    Value8Bit = 24U,
    Value16Bit = 25U,
    Value32Bit = 26U,
    Value64Bit = 27U,
    IndefiniteLength = 31U,

    MajorTypeShift = SmallValueBitLength,
    MajorTypeMask = ~0U << MajorTypeShift,

    BreakByte = (unsigned)Break | (SimpleTypesType << MajorTypeShift)
};
extern int atoi(const char *);
extern long atol(const char *);
extern long long atoll(const char *);
extern double atof(const char *str);
extern double strtod(const char *nptr, char **endptr);
extern void free(void *);
extern void *malloc(size_t);
extern void *calloc(size_t, size_t);
extern void *realloc(void *, size_t);
extern void add_malloc_block(void *, size_t);