logs/bindings.rs

#[test]
fn bindgen_test_layout_cbor_decoder_reader() {
    assert_eq!(
        ::core::mem::size_of::<cbor_decoder_reader>(),
        56usize,
        concat!("Size of: ", stringify!(cbor_decoder_reader))
    );
    assert_eq!(
        ::core::mem::align_of::<cbor_decoder_reader>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_decoder_reader))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_decoder_reader>())).get8 as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(get8)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_decoder_reader>())).get16 as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(get16)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_decoder_reader>())).get32 as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(get32)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_decoder_reader>())).get64 as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(get64)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_decoder_reader>())).cmp as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(cmp)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_decoder_reader>())).cpy as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(cpy)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<cbor_decoder_reader>())).message_size as *const _ as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_decoder_reader),
            "::",
            stringify!(message_size)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CborParser {
    pub d: *mut cbor_decoder_reader,
    pub end: ::std::os::raw::c_int,
    pub flags: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_CborParser() {
    assert_eq!(
        ::core::mem::size_of::<CborParser>(),
        16usize,
        concat!("Size of: ", stringify!(CborParser))
    );
    assert_eq!(
        ::core::mem::align_of::<CborParser>(),
        8usize,
        concat!("Alignment of ", stringify!(CborParser))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborParser>())).d as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CborParser),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborParser>())).end as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CborParser),
            "::",
            stringify!(end)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborParser>())).flags as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(CborParser),
            "::",
            stringify!(flags)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CborValue {
    pub parser: *const CborParser,
    pub offset: ::std::os::raw::c_int,
    pub remaining: u32,
    pub extra: u16,
    pub type_: u8,
    pub flags: u8,
}
#[test]
fn bindgen_test_layout_CborValue() {
    assert_eq!(
        ::core::mem::size_of::<CborValue>(),
        32usize,
        concat!("Size of: ", stringify!(CborValue))
    );
    assert_eq!(
        ::core::mem::align_of::<CborValue>(),
        8usize,
        concat!("Alignment of ", stringify!(CborValue))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborValue>())).parser as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CborValue),
            "::",
            stringify!(parser)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborValue>())).offset as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CborValue),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborValue>())).remaining as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CborValue),
            "::",
            stringify!(remaining)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborValue>())).extra as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CborValue),
            "::",
            stringify!(extra)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborValue>())).type_ as *const _ as usize },
        26usize,
        concat!(
            "Offset of field: ",
            stringify!(CborValue),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborValue>())).flags as *const _ as usize },
        27usize,
        concat!(
            "Offset of field: ",
            stringify!(CborValue),
            "::",
            stringify!(flags)
        )
    );
}
extern "C" {
    pub fn cbor_parser_init(
        d: *mut cbor_decoder_reader,
        flags: ::std::os::raw::c_int,
        parser: *mut CborParser,
        it: *mut CborValue,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_advance_fixed(it: *mut CborValue) -> CborError;
}
extern "C" {
    pub fn cbor_value_advance(it: *mut CborValue) -> CborError;
}
extern "C" {
    pub fn cbor_value_enter_container(it: *const CborValue, recursed: *mut CborValue) -> CborError;
}
extern "C" {
    pub fn cbor_value_leave_container(it: *mut CborValue, recursed: *const CborValue) -> CborError;
}
extern "C" {
    pub fn _cbor_value_decode_int64_internal(value: *const CborValue) -> u64;
}
extern "C" {
    pub fn cbor_value_get_int64_checked(value: *const CborValue, result: *mut i64) -> CborError;
}
extern "C" {
    pub fn cbor_value_get_int_checked(
        value: *const CborValue,
        result: *mut ::std::os::raw::c_int,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_skip_tag(it: *mut CborValue) -> CborError;
}
extern "C" {
    pub fn _cbor_value_copy_string(
        value: *const CborValue,
        buffer: *mut ::std::os::raw::c_void,
        buflen: *mut usize,
        next: *mut CborValue,
    ) -> CborError;
}
extern "C" {
    pub fn _cbor_value_dup_string(
        value: *const CborValue,
        buffer: *mut *mut ::std::os::raw::c_void,
        buflen: *mut usize,
        next: *mut CborValue,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_calculate_string_length(
        value: *const CborValue,
        length: *mut usize,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_text_string_equals(
        value: *const CborValue,
        string: *const ::std::os::raw::c_char,
        result: *mut bool,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_map_find_value(
        map: *const CborValue,
        string: *const ::std::os::raw::c_char,
        element: *mut CborValue,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_get_half_float(
        value: *const CborValue,
        result: *mut ::std::os::raw::c_void,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_value_to_pretty_advance(out: *mut FILE, value: *mut CborValue) -> CborError;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mgmt_cbuf {
    pub parser: CborParser,
    pub encoder: CborEncoder,
    pub it: CborValue,
}
#[test]
fn bindgen_test_layout_mgmt_cbuf() {
    assert_eq!(
        ::core::mem::size_of::<mgmt_cbuf>(),
        72usize,
        concat!("Size of: ", stringify!(mgmt_cbuf))
    );
    assert_eq!(
        ::core::mem::align_of::<mgmt_cbuf>(),
        8usize,
        concat!("Alignment of ", stringify!(mgmt_cbuf))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mgmt_cbuf>())).parser as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(mgmt_cbuf),
            "::",
            stringify!(parser)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mgmt_cbuf>())).encoder as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(mgmt_cbuf),
            "::",
            stringify!(encoder)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mgmt_cbuf>())).it as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(mgmt_cbuf),
            "::",
            stringify!(it)
        )
    );
}
pub const CborMajorTypes_UnsignedIntegerType: CborMajorTypes = 0;
pub const CborMajorTypes_NegativeIntegerType: CborMajorTypes = 1;
pub const CborMajorTypes_ByteStringType: CborMajorTypes = 2;
pub const CborMajorTypes_TextStringType: CborMajorTypes = 3;
pub const CborMajorTypes_ArrayType: CborMajorTypes = 4;
pub const CborMajorTypes_MapType: CborMajorTypes = 5;
pub const CborMajorTypes_TagType: CborMajorTypes = 6;
pub const CborMajorTypes_SimpleTypesType: CborMajorTypes = 7;
pub type CborMajorTypes = u32;
pub const CborSimpleTypes_FalseValue: CborSimpleTypes = 20;
pub const CborSimpleTypes_TrueValue: CborSimpleTypes = 21;
pub const CborSimpleTypes_NullValue: CborSimpleTypes = 22;
pub const CborSimpleTypes_UndefinedValue: CborSimpleTypes = 23;
pub const CborSimpleTypes_SimpleTypeInNextByte: CborSimpleTypes = 24;
pub const CborSimpleTypes_HalfPrecisionFloat: CborSimpleTypes = 25;
pub const CborSimpleTypes_SinglePrecisionFloat: CborSimpleTypes = 26;
pub const CborSimpleTypes_DoublePrecisionFloat: CborSimpleTypes = 27;
pub const CborSimpleTypes_Break: CborSimpleTypes = 31;
pub type CborSimpleTypes = u32;
pub const SmallValueBitLength: _bindgen_ty_1 = 5;
pub const SmallValueMask: _bindgen_ty_1 = 31;
pub const Value8Bit: _bindgen_ty_1 = 24;
pub const Value16Bit: _bindgen_ty_1 = 25;
pub const Value32Bit: _bindgen_ty_1 = 26;
pub const Value64Bit: _bindgen_ty_1 = 27;
pub const IndefiniteLength: _bindgen_ty_1 = 31;
pub const MajorTypeShift: _bindgen_ty_1 = 5;
pub const MajorTypeMask: _bindgen_ty_1 = 4294967264;
pub const BreakByte: _bindgen_ty_1 = 255;
pub type _bindgen_ty_1 = u32;
extern "C" {
    pub fn atoi(arg1: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn atol(arg1: *const ::std::os::raw::c_char) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn atoll(arg1: *const ::std::os::raw::c_char) -> ::std::os::raw::c_longlong;
}
extern "C" {
    pub fn atof(str: *const ::std::os::raw::c_char) -> f64;
}
extern "C" {
    pub fn strtod(
        nptr: *const ::std::os::raw::c_char,
        endptr: *mut *mut ::std::os::raw::c_char,
    ) -> f64;
}
extern "C" {
    pub fn free(arg1: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn malloc(arg1: usize) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn calloc(arg1: usize, arg2: usize) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn realloc(arg1: *mut ::std::os::raw::c_void, arg2: usize) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn add_malloc_block(arg1: *mut ::std::os::raw::c_void, arg2: usize);
}
